[package]
name = "space-viewer"
version = "0.1.0"
edition = "2024"
default-run = "space-viewer"

[dependencies]
reqwest = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
inquire = "0.9.3"
open = "5.3.3"
dotenv = "0.15.0"
